Hardening: Rate limiting, logging, security fixes, and documentation

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DATABASE_URL=
 JWT_SECRET=
-BASE_URL=
+BASE_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
@@ -8,3 +9,4 @@ GITHUB_CLIENT_SECRET=
 LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
 AI_INTERNAL_API_KEY=
+LOG_LEVEL=info
